fix|feat_added_z-index_for_nav-bar_and added_the_scrollbar_and_logo

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,6 +20,29 @@ html {
     scroll-behavior: smooth;
 }
 
+/*      START of ScrollBar       */
+/* width */        
+::-webkit-scrollbar {
+  width: 12px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  border: 1.5px solid #7e7e7e;
+  border-radius: 8px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: var(--main-gray);
+  border: 2px solid #616161;
+  border-radius: 8px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+/*      END of ScrollBar       */
+
 /* 1200px / 16px = 75em */
 @media (max-width: 75em) {
   html {
@@ -51,16 +74,27 @@ body {
 
 .nav {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     position: fixed;
     width: 100%;
     background: #f0f0f0;
+    z-index: 10;
+}
+
+.logo {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  padding: 0 10px 0;
+}
+
+.logo img {
+  width: 50px;
 }
 
 .nav-list {
     display: flex;
     list-style: none;
-    margin-right: 2rem;
 }
 
 a {
@@ -208,7 +242,7 @@ h2 {
     align-items: center;
     text-align: center;
     width: 100%;
-    height: 80vh;
+    height: 85vh;
     padding: 0 2rem;
     background: var(--main-gray);
 }
